# Joanne

./: .env.example  README.md  hello.py  myapp.py  pyproject.toml  sample_report.txt
backend/: backend.py  myapp.py  rag.py  requirements.txt
backend/faiss_index/: index.faiss  index.pkl
backend/templates/: index.html
frontend/: frontend.py
