[project]
name = "joanne"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "faiss-cpu>=1.10.0",
    "fastapi>=0.115.8",
    "google-generativeai>=0.8.4",
    "jinja2>=3.1.5",
    "langchain>=0.3.18",
    "langchain-community>=0.3.17",
    "langchain-google-genai>=2.0.9",
    "langchain-huggingface>=0.1.2",
    "numpy>=2.2.2",
    "pymupdf>=1.25.3",
    "pyspellchecker>=0.8.2",
    "python-multipart>=0.0.20",
    "seaborn>=0.13.2",
    "sentence-transformers>=3.4.1",
    "streamlit>=1.42.0",
    "uvicorn>=0.34.0",
    "wordcloud>=1.9.4",
]
